add all chapter

--- a/Другие книги/Навигация по другим книгам.md
+++ b/Другие книги/Навигация по другим книгам.md
@@ -1,1 +1,2 @@
 [[Навигация по книге «Building and Installing Software Packages for Linux»]]
+[[Навигация по книге Beginner's Guide to Installing from Source]]
